# tree-sitter-rsh

./: Cargo.toml  README.md  binding.gyp  grammar.js  package.json  shell.nix
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
